checking in a fix for #135 - "jumpy" subset under IE7
git-svn-id: file:///space/source.marketcetera.org/root/trunk@8081 501a4a96-914b-0410-8454-f5988a4ca596

--- a/source/tradebase/public/stylesheets/global.css
+++ b/source/tradebase/public/stylesheets/global.css
@@ -359,7 +359,7 @@ body {
 }
 
 body .right_column fieldset #subset_content {
-  margin-left: 50px;
+  padding-left: 50px;
 }
 
 #body .right_column .submit {
